--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,14 +9,17 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Splash.theme">
-        <activity android:name=".MainActivity" android:theme="@style/loginGreenland">
+        <activity android:name=".Slide"></activity>
+        <activity
+            android:name=".SplashActivity"
+            android:theme="@style/loginGreenland">
             <intent-filter>
-                <action android:name="android.intent.action.MAIN"/>
-                <category android:name="android.intent.category.LAUNCHER"/>
+                <action android:name="android.intent.action.MAIN" />
+
+                <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        
-        <activity android:name=".SplashActivity"> </activity>
+        <activity android:name=".MainActivity" />
     </application>
 
 </manifest>
